Compiles with OpenAPI
